--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "lodash": "^4.17.15"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
+    "react": "^16.0.0",
+    "react-native": "^0.62.2",
     "react-native-reanimated": "^1.8.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.150",
     "@types/react": "^16.9.34",
+    "@types/react-native": "^0.62.5",
     "typescript": "^3.8.3"
   }
 }
