--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-native-reanimation",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Merging the simplicity of react-native-animatible with the performance of react-native-reanimated using hooks",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && tsc"
   },
   "prepublish": "tsc",
   "keywords": [
@@ -22,16 +23,12 @@
   ],
   "author": "Olivier Wilkinson",
   "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.15"
-  },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-native": "^0.62.2",
-    "react-native-reanimated": "^1.8.0"
+    "react": "^16.8.0",
+    "react-native": "^0.59.0",
+    "react-native-reanimated": "*"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.150",
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.5",
     "typescript": "^3.8.3"
